# web-spirograph

./: README.md  TODO.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: storybook.yaml
back/: pom.xml  todo.md
back2/: .env.development  TODO  package-lock.json  package.json  tsconfig.json
back2/src/: app.controller.spec.ts  app.controller.ts  app.controller.ts.ts  app.module.ts  app.service.ts  main.ts
back2/test/: app.e2e-spec.ts
config/: webpack.config.js
example-images/: mp4togif.sh
front/: .gitignore  README.md  TODO.md  build_prod.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
front/.storybook/: main.ts
front/public/: index.html  manifest.json
front/src/: App.tsx  environmentVariables.ts  index.css  index.tsx
front/src/utils/PerformanceModules/wasm/calc_lines/calc_lines/: Cargo.toml  test_data.json
front/src/utils/PerformanceModules/wasm/calc_lines/calc_lines/src/: lib.rs
public/: index.html
src/: App.tsx  index.css  index.tsx  worker.d.ts
src/canvasWorker/: cycloidAnimationWorker.ts  workerEntryPoint.ts  workerEntryPoint.worker.ts
src/classes/: BoundingCircle.ts  Cycloid.ts  CycloidParams.ts  Rod.ts  cycloidControls.ts
src/constants/: colors.ts
src/contexts/: rerenderToggle.tsx  worker.ts
src/declarations/: guify.d.ts
src/pages/: BackgroundParticles.tsx  Landing.tsx  main.tsx
src/types/: Stage.ts  cycloidControls.ts  cycloidDirection.ts  cycloidParams.ts  rotationDirection.ts
src/utils/: generateCycloids.ts  handleZoom.ts  math.ts  remap.ts  setCanvasSize.ts  (+3 more)
(+350 files in other folders)
