[package]
name = "calc_lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde-wasm-bindgen = "0.4.5"
web-sys = "0.3.60"